fix word wrap

--- a/client-admin/src/app/modules/program/views/program-workflow/program-workflow.component.scss
+++ b/client-admin/src/app/modules/program/views/program-workflow/program-workflow.component.scss
@@ -13,3 +13,9 @@
 .event-count {
   font-size: 1.5em;
 }
+
+.top-tabs {
+  ion-label {
+    white-space: nowrap;
+  }
+}
